# tec_expenditure

./: .gitignore  CLAUDE.md  audit_all_data.py  browser_collect_rd_data.py  browser_open.py  collect_provincial_data.py  collect_rd_playwright.py  compile_rd_data.py  csmar_collect_tax_incentive.py  generate_all_figures.py  generate_paper.py  generate_ppt_figures.py  generate_revised_paper.py  interactive_browser.py  merge_final.py  merge_final_v3.py  merge_final_v4.py  pyproject.toml  requirements.txt  run_efficiency_analysis.py  run_final_policy_models.py  run_focus_analysis.ipynb  run_focus_analysis.py  run_models_comprehensive.py  run_models_final.py  run_models_v2.py  run_models_v4.py  search_library.py  本地agent运行步骤与Prompt.md  选题及框架.docx
.claude/: settings.local.json
data/: 2024_tech_expenditure_bulletin.txt  data_audit_report.md  firm_panel_final.csv  firm_panel_final.xlsx  province_rd_exp_collected.csv  provincial_panel.csv  provincial_panel_full.csv  provincial_rd_gdp_2024.csv  stats_search_result.txt  分省年度数据 (2).csv  分省年度数据.csv  分省年度数据_1.csv  分省年度数据_3.csv  分省年度数据_4.csv  分省年度数据_5.csv  分省年度数据_6.csv  分省年度数据_7.csv  分省年度数据_8.csv  描述性统计数据.xlsx  数据清单对照表.md  最终数据清单.md
docs/: agent_template.py  data_requirements.md  local_agent_workflow.md
outputs/: 00_missing_rates.csv  01_descriptive_statistics.csv  01_sample_distribution_year_treat.csv  02_baseline_results.csv  03_mechanism_results.csv  04_robustness_results.csv  07_full_model_summaries.txt  08_data_description.md  clean_panel_for_models.csv  paper_innovation_efficiency.docx  (+1 more)
v5/: README.md  run_explore_v5.py
(+135 files in other folders)
