[project]
name = "browser-use-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-use>=0.12.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "playwright>=1.59.0",
    "statsmodels>=0.14.0",
    "linearmodels>=5.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.3.0",
]
